; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_retu_wdt.c_retu_wdt_ping.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_retu_wdt.c_retu_wdt_ping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.watchdog_device = type { i32 }
%struct.retu_wdt_dev = type { i32 }

@RETU_REG_WATCHDOG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.watchdog_device*)* @retu_wdt_ping to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @retu_wdt_ping(%struct.watchdog_device* %0) #0 {
  %2 = alloca %struct.watchdog_device*, align 8
  %3 = alloca %struct.retu_wdt_dev*, align 8
  store %struct.watchdog_device* %0, %struct.watchdog_device** %2, align 8
  %4 = load %struct.watchdog_device*, %struct.watchdog_device** %2, align 8
  %5 = call %struct.retu_wdt_dev* @watchdog_get_drvdata(%struct.watchdog_device* %4)
  store %struct.retu_wdt_dev* %5, %struct.retu_wdt_dev** %3, align 8
  %6 = load %struct.retu_wdt_dev*, %struct.retu_wdt_dev** %3, align 8
  %7 = getelementptr inbounds %struct.retu_wdt_dev, %struct.retu_wdt_dev* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @RETU_REG_WATCHDOG, align 4
  %10 = load %struct.watchdog_device*, %struct.watchdog_device** %2, align 8
  %11 = getelementptr inbounds %struct.watchdog_device, %struct.watchdog_device* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @retu_write(i32 %8, i32 %9, i32 %12)
  ret i32 %13
}

declare dso_local %struct.retu_wdt_dev* @watchdog_get_drvdata(%struct.watchdog_device*) #1

declare dso_local i32 @retu_write(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
